force-app/main/default/objects/Order_Tracking__c/Order_Tracking__c.object-meta.xml
<CustomObject>
    <label>Order Tracking</label>
    <nameField>
        <label>Order Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderTrackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>