force-app/main/default/objects/Order_Tracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Trackings</relationshipLabel>
    <relationshipName>Order_Trackings</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Direct link to the customer's Account, set by CheckoutController alongside Order__c — lets Order Trackings show as a related list directly on the Account record, not just two hops away through Order.</description>
</CustomField>