force-app/main/default/objects/Order_Tracking__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <length>255</length>
    <type>Text</type>
    <description>The reason the customer gave when requesting a return via CheckoutController.requestReturn. Blank unless a return was ever requested on this order.</description>
</CustomField>