force-app/main/default/objects/Order_Tracking__c/fields/Tracking_NUmber__c.field-meta.xml
<CustomField>
    <fullName>Tracking_NUmber__c</fullName>
    <label>Tracking NUmber</label>
    <length>18</length>
    <type>Text</type>
</CustomField>